# reservoir

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
docs/: api.md  architecture.md  data_model.md  deployment.md  dev.md  faq.md  features.md
examples/python/: main.py
hurl/: chat_completion.hurl  ollama_mode.hurl  reservoir-search.hurl  reservoir-view.hurl  test.sh
migrations/: create_new_index.cypher  move_embeddings_out.cypher
scripts/: com.sectorflabs.reservoir.plist  migrations.sh
src/: args.rs  main.rs
src/clients/: embeddings.rs
src/clients/embedding/: mod.rs
src/clients/llm/: mod.rs  utils.rs
src/clients/openai/: chat_completions.rs  embeddings.rs  mod.rs  model_info.rs  types.rs
src/commands/: config.rs  export.rs  import.rs  ingest.rs  mod.rs  replay.rs  search.rs  start.rs  view.rs
src/handler/: completions.rs
src/models/: chat_request.rs  chat_response.rs  embedding_node.rs  message_node.rs  mod.rs
src/repos/: config.rs  embedding.rs  message.rs  mod.rs
src/repos/embedding/: embedding.rs  mod.rs
src/repos/message/: message.rs  mod.rs  neo4j_message.rs
src/services/: mod.rs
src/static/: ollama_show.json  ollama_tags.json
src/utils/: mod.rs
