[package]
name = "rsrvr"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sector-f-labs/reservoir"
authors = ["Divan Visagie <me@divanv.com>"]
license = "Apache-2.0"
description = "Store all your LLM Interactions"

[dependencies]
tokio       = { version = "1.45.0", features = ["full"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = "0.4.41"
anyhow      = "1.0"   
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
neo4rs = "0.8.0"
http-body-util = "0.1"
bytes = "1"
http = "1"
reqwest = { version = "0.12.15", features = ["json"] }
uuid = { version = "1.16.0", features = ["v4"] }
hyper-tls = "0.6.0"
tiktoken-rs = "0.6.0"
clap = { version = "4.5.37", features = ["derive"] }
openai = { version = "1.1.0", features = ["reqwest"] }
once_cell = "1.18"
toml = "0.8.22"
dirs-next = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
